<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    tools:context="danowski19.hw2.MainActivity">


    <!--<LinearLayout-->
        <!--android:id="@+id/human"-->
        <!--android:layout_width="800dp"-->
        <!--android:layout_height="800dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:orientation="horizontal">-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_gravity="top|center_horizontal"
        android:background="@android:color/holo_blue_dark">

        <danowski19.hw2.Face
            android:id="@+id/canvas"
            android:layout_width="800dp"
            android:layout_height="800dp"
            android:layout_gravity="top|center" />

    </FrameLayout>
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RGB_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:text="@string/rgb_instructions"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="11"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/tv_bar_red_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewRED"
                        android:layout_width="@android:dimen/app_icon_size"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical|end"
                        android:text="@string/red" />

                    <TextView
                        android:id="@+id/textViewRED_VALUE"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="@string/red_value" />

                    <SeekBar
                        android:id="@+id/seekBarRED"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:max="255" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_bar_green_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewGREEN"
                        android:layout_width="@android:dimen/app_icon_size"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical|end"
                        android:text="@string/green" />

                    <TextView
                        android:id="@+id/textViewGREEN_VALUE"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="@string/green_value" />

                    <SeekBar
                        android:id="@+id/seekBarGREEN"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:max="255" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_bar_blue_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewBLUE"
                        android:layout_width="@android:dimen/app_icon_size"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center_vertical|end"
                        android:text="@string/blue" />

                    <TextView
                        android:id="@+id/textViewBLUE_VALUE"
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="@string/blue_value" />

                    <SeekBar
                        android:id="@+id/seekBarBLUE"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:max="255" />

                </LinearLayout>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup_ATTRIBUTE"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checkedButton="@+id/radioButton_SKIN"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton_SKIN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/RB_skin" />

                <RadioButton
                    android:id="@+id/radioButton_EYES"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/RB_eyes" />

                <RadioButton
                    android:id="@+id/radioButton_HAIR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/RB_hair" />
            </RadioGroup>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/spin_rand_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spin_instructions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lines="2"
                android:text="@string/hair_instructions"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinnerSELECT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:spinnerMode="dropdown"
                android:entries="@array/hair_style"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <Button
                android:id="@+id/buttonRANDOMIZE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/button_randomize" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>


<!--
    External Citation  Date:    14 September 2015
    Problem:  want to set default text size
    Resource: https://stackoverflow.com/questions/44382003/set-default-font-size-in-styles-xml
    Solution: I used the example code from this post.
    -->